--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -2,6 +2,18 @@
 <!-- http://localhost:3000/isolated/exercise/01.html -->
 
 <!-- 🐨 Create (in HTML) a <body> with a <div> with the id of "root" -->
+    <body>
+        <script type="module">
+                let rootNode = document.createElement('div');
+                let body = document.querySelector('body');
+                rootNode.setAttribute('id', 'root');
+                body.append(rootNode);
+                // let root = document.getElementById('root');
+                let div = document.createElement('div');
+                div.textContent = 'Hello World';
+                rootNode.append(div);
+                </script>
+    </body>
 <!-- 🐨 Then create a <script type="module"> for your JavaScript -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script#attributes -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules -->
