--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -6,16 +6,53 @@
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
+    // const message = props => <div className="message" {...props} />
 
+    // const elementOne = React.createElement(message, {children: 'Hello World 2'})
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
+    // const element = (
+    //   <div className="container">
+    //     {message({children: 'Hello World'})}
+    //     {message({children: 'Goodbye World'})}
+    //     {elementOne}
+    //   </div>
+    // )
+
+    // =================================
+
+    function Message({subject, greeting}) {
+      return (
+        <div className="message">
+          {greeting}, {subject}
+        </div>
+      )
+    }
+
+    // const PropTypes = {
+    //   string(props, propName, componentName) {
+    //     console.log(props, propName, componentName);
+    //     if (typeof props[propName] !== 'string') {
+    //       return new Error(props[propName] + 'Not a string')
+    //     } else if (!!props[propName] === false){
+    //       return new Error('Empty')
+    //     }
+    //   },
+    // }
+
+    Message.propTypes = {
+      subject: PropTypes.string.isRequired,
+      greeting: PropTypes.string.isRequired,
+    }
+
     const element = (
-      <div className="container">
-        <div className="message">Hello World</div>
-        <div className="message">Goodbye World</div>
-      </div>
+      <>
+        <Message subject='Math' greeting="Hello" />
+        <Message subject='Math' greeting="Hi" />
+      </>
     )
 
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
